--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ $('#s4-go').click(function(event) {
 		$('#slide4 .loading-mask').animate({'width': '37.5%'}, 1000);
 	},1300)
 	setTimeout(function(){
-		mainSwiper.slideTo(5, 800, true});
+		mainSwiper.slideTo(5, 800, true);
 	},2500)
 });
 
