--- a/index.html
+++ b/index.html
@@ -94,8 +94,17 @@
 				<a href="" id="s6-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="2.8s"><img src="images/go.png"></a>
 				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="3.5s">
 			</div>
-			<div class="swiper-slide" id="tech" data-hash="slide8">
-				
+			<div class="swiper-slide" id="tech" data-hash="slide8" class="showDoc">
+				<div id="tech-main">
+					<img src="images/showdoc-bg.png" id="showdoc-bg">
+<!-- 					<img src="images/showdoc-title.png" id="showdoc-title">
+					<img src="images/showdoc-back.png" id="showdoc-back">
+					<img src="images/tech-title.png" id="tech-title">
+					<img src="images/tech-word.png" id="tech-word">
+					<img src="images/tech-1.png" id="tech-1">
+					<img src="images/tech-2.png" id="tech-2"> -->
+				</div>
+				<img src="images/logo.png" class="s2-logo ani">
 			</div>
 		</div>
 	</div>
