--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
 			</div>
 			<div class="swiper-slide" id="tech" data-hash="slide8" class="showDoc">
 				<div id="tech-main">
-					<img src="images/showdoc-bg.png" id="tech-bg">
-					<img src="images/showdoc-title.png" class="showdoc-title">
-					<a href="" id="tech-back"><img src="images/showdoc-back.png"></a>
-					<img src="images/tech-title.png" id="tech-title">
-					<img src="images/tech-word.png" id="tech-word">
-					<img src="images/tech-1.png" id="tech-1">
-					<img src="images/tech-2.png" id="tech-2">
+					<img src="images/showdoc-bg.png" id="tech-bg" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s" class="ani">
+					<img src="images/showdoc-title.png" class="showdoc-title ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s">
+					<a href="" id="tech-back" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani"><img src="images/showdoc-back.png"></a>
+					<img src="images/tech-title.png" id="tech-title" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/tech-word.png" id="tech-word" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/tech-1.png" id="tech-1" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
+					<img src="images/tech-2.png" id="tech-2" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
 				</div>
-				<img src="images/logo.png" class="s2-logo">
+				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="2.8s">
 			</div>
 		</div>
 	</div>
