--- a/index.html
+++ b/index.html
@@ -94,17 +94,48 @@
 				<a href="" id="s6-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="2.8s"><img src="images/go.png"></a>
 				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="3.5s">
 			</div>
-			<div class="swiper-slide" id="tech" data-hash="slide8" class="showDoc">
+			<div class="swiper-slide showdoc" id="tech" data-hash="slide8">
 				<div id="tech-main">
-					<img src="images/showdoc-bg.png" id="tech-bg" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s" class="ani">
+					<img src="images/showdoc-bg.png" class="showdoc-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
 					<img src="images/showdoc-title.png" class="showdoc-title ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s">
-					<a href="" id="tech-back" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani"><img src="images/showdoc-back.png"></a>
+					<a href="" id="tech-back" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani showdoc-back"><img src="images/showdoc-back.png"></a>
 					<img src="images/tech-title.png" id="tech-title" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
 					<img src="images/tech-word.png" id="tech-word" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
 					<img src="images/tech-1.png" id="tech-1" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
 					<img src="images/tech-2.png" id="tech-2" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
 				</div>
 				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="2.8s">
+			</div>
+			<div class="swiper-slide showdoc" id="design" data-hash="slide9">
+				<div id="design-main">
+					<img src="images/showdoc-bg.png" class="showdoc-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
+					<img src="images/showdoc-title.png" class="showdoc-title ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s">
+					<a href="" id="design-back" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani showdoc-back"><img src="images/showdoc-back.png"></a>
+					<img src="images/design-title.png" id="design-title" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/design-word.png" id="design-word" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/design-1.png" id="design-1" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
+					<img src="images/design-2.png" id="design-2" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
+				</div>
+				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="2.8s">
+			</div>
+			<div class="swiper-slide showdoc" id="planning" data-hash="slide10">
+				<div id="planning-main">
+					<img src="images/showdoc-bg.png" class="showdoc-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
+					<img src="images/showdoc-title.png" class="showdoc-title ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s">
+					<a href="" id="planning-back" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani showdoc-back"><img src="images/showdoc-back.png"></a>
+					<img src="images/planning-title.png" id="planning-title" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/planning-word.png" id="planning-word" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.4s" class="ani">
+					<img src="images/planning-1.png" id="planning-1" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.7s" swiper-animate-delay="2.1s" class="ani">
+					<img src="images/planning-2.png" id="planning-2" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="2.4s" class="ani">
+					<img src="images/planning-3.png" id="planning-3" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="2.7s" class="ani">
+				</div>
+				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="3.4s">
+			</div>
+			<div class="swiper-slide" id="slide7" data-hash="slide11">
+				<img src="images/s7-title.png" id="s7-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
+				<img src="images/s7-word.png" id="s7-word" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.6s" class="ani">
+				<a href="" id="s7-go" class="go ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s"><img src="images/go.png"></a>
+				<img src="images/logo.png" class="s2-logo ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="1.8s">
 			</div>
 		</div>
 	</div>
@@ -235,8 +266,11 @@ $('#s6-planning').tap(function() {
 $('#s6-go').tap(function() {
 	mainSwiper.slideTo(10, 800,true);
 })
-$('#tech-back').tap(function() {
+$('.showdoc-back').tap(function() {
 	mainSwiper.slideTo(6, 800,true);
+})
+$('#s7-go').tap(function() {
+	window.location.href = "http://m.la-chance.net/";
 })
 
 var stepTime = 4;
