--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
 				<div id="ani-main">
 					<div class="swiper-container" id="ani-swiper">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><!-- <img src="images/ani-1.jpg" id="ani-1"> -->slie1asdf</div>
+							<div class="swiper-slide">
+								<img src="images/steam-house.png" id="steam-house" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.7s" swiper-animate-delay="0s" class="ani">
+								<img src="images/ani-land.png" id="ani-land">
+								<div id="steam-fulltrain">
+									<img src="images/steam-tire.png" id="steam-tire1">
+									<img src="images/steam-tire.png" id="steam-tire2">
+									<img src="images/steam-train.png" id="steam-train">
+								</div>
+								<img src="images/steam-railway.png" id="steam-railway" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s" class="ani">
+								<img src="images/steam-cloud1.png" id="steam-cloud1" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
+								<img src="images/steam-cloud2.png" id="steam-cloud2" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
+								<img src="images/steam-cloud3.png" id="steam-cloud3" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
+
+							</div>
 							<div class="swiper-slide">Slide 2</div>
 							<div class="swiper-slide">Slide 3</div>
 						</div>
@@ -172,7 +185,7 @@
 					crossFade: true,
 				},
 				hashnav: true,
-				// onlyExternal: true,
+				onlyExternal: true,
 				onInit: function(swiper){ 
 					swiperAnimateCache(swiper); 
 					swiperAnimate(swiper); 
@@ -220,12 +233,39 @@
 
 }
 
-					if (swiper.activeIndex == 3) {
-						var aniSwiper = new Swiper ('#ani-swiper', {
+if (swiper.activeIndex == 3) {
+	var aniSwiper = new Swiper ('#ani-swiper', {
+		effect : 'fade',
+		fade: {
+			crossFade: true,
+		},
+		onInit: function(swiper){ 
+			swiperAnimateCache(swiper); 
+			swiperAnimate(swiper); 
+		}		
+
+	})  
+	var aniIndex = 0;
+	$('#ani-circle').swipeLeft(function(){
+		if (aniIndex==0) {
+			$(this).addClass('circle-rotate1');
+			aniSwiper.slideTo(1, 800, true);	
+		}
+		if (aniIndex==1) {
+			$(this).removeClass().addClass('circle-rotate2');
+			aniSwiper.slideTo(2, 800, true);
+		}
+		if (aniIndex==2) {
+			$(this).removeClass().addClass('circle-rotate3');
+			mainSwiper.slideTo(4, 800, true);
+		}
+		aniIndex++;	
+
+	})
+}
 
 
-  						})  
-					}
+
 },
 onTransitionEnd: function(swiper){
 
@@ -237,7 +277,7 @@ onTransitionEnd: function(swiper){
 $('#ani-swiper').tap(function(){
 	// alert(1);
 })
-      
+
 
 
 var windowWidth = parseInt($(window).width());
