--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 								<img src="images/steam-cloud3.png" id="steam-cloud3" swiper-animate-effect="fadeIn" swiper-animate-duration="0.7s" swiper-animate-delay="1.2s" class="ani">
 
 							</div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide" id="ani-s2"></div>
+							<div class="swiper-slide" id="ani-s3"></div>
 						</div>
 					</div>
 					<img src="images/ani-bg.png" id="ani-bg">
@@ -170,7 +170,7 @@
 	<script src="js/swiper.animate1.0.2.min.js"></script>
 	<script>
 		$(document).ready(function() {
-
+			alert(1);
 			$('a').on('tap', 'a', function(event) {
 				event.preventDefault();
 			});
@@ -239,11 +239,14 @@ if (swiper.activeIndex == 3) {
 		fade: {
 			crossFade: true,
 		},
+		onlyExternal: true,
 		onInit: function(swiper){ 
 			swiperAnimateCache(swiper); 
 			swiperAnimate(swiper); 
-		}		
-
+		},
+		onSlideChangeEnd: function(swiper){ 
+			swiperAnimate(swiper);	
+		}
 	})  
 	var aniIndex = 0;
 	$('#ani-circle').swipeLeft(function(){
