--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<img src="images/s1-circle1.png" id="s1-c1" class="s1-c1 circle">
 				<img src="images/s1-circle2.png" id="s1-c2" class="s1-c2 circle">
 				<img src="images/s1-circle3.png" id="s1-c3" class="s1-c3 circle">
+				<img src="images/earth.jpg" id="s1-earth">
 				<a href="#" id="s1-fp"><img src="images/s1-fingerprint.png"></a>
 				<img src="images/s1-subline.png" id="s1-sbl">
 			</div>
