--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
 </head>
 <body>
 
+	<div class="loading">
+		<img src="images/logo-big.png">
+		<div class="progress-bar">
+			<img src="images/progress-bg.png">
+			<div id="nowprogress"></div>
+		</div>
+	</div>
+	<script>
+		var isTo80;
+		var nowProgress = document.getElementById('nowprogress');
+		nowProgress.style.width = '0%';
+		var loadingTimer = setInterval(function(){
+			var pbWidth = parseFloat(nowProgress.style.width);
+			if (pbWidth<80) {
+				nowProgress.style.width = pbWidth + 0.5 +'%';
+			} else {
+				clearInterval(loadingTimer);
+				isTo80 = true;
+			}
+		},15);
+	</script>
+
 	<div class="swiper-container" id="main-swiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide" id="subtitles" data-hash="sub">
