--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<p id="now-date"></p>
 					<img src="images/s2-word2.png" id="s2-word2">
 				</div>
-				<img src="images/logo.png" class="s2-logo ani">
+				<img src="images/logo.png" class="s2-logo" id="s2-logo">
 			</div>
 
 
