--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
 				<!-- <img src="images/s2-word1.png" id="s2-word1"> -->
 				<div id="s2-word1">
-					<p>您好</p>
-					<p>很高兴为您服务</p>
+					<p class="s2-para1">您好</p>
+					<p class="s2-para2">很高兴为您服务</p>
 				</div>
 				<div id="s2-para">
 					<p id="now-date"></p>
